fix gap for dApp dropwdown

--- a/src/components/Wallet/TopBar/TopBar.scss
+++ b/src/components/Wallet/TopBar/TopBar.scss
@@ -75,6 +75,8 @@
 }
 
 #connect-dapp {
+    display: flex;
+    flex-direction: column;
   gap: 10px;
   padding: 20px;
   padding-bottom: 10px;
